# workspace

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  scale_pod.py  wks.py
.beads/: issues.jsonl
docs/: design_doc.md  user_guide.md
features/: smoke_tests.feature
features/steps/: steps.py
k8s/: collabora-ui-config.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
mbse/: sdlc_pod.sysml
