[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "behave>=1.3.3",
    "kubernetes>=35.0.0",
    "requests>=2.32.5",
]

[project.scripts]
wks = "wks:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["wks.py", "scale_pod.py", "main.py"]

[tool.hatch.build.targets.wheel.sources]
"." = ""
